navbar css and slide dive add

--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -1,1 +1,12 @@
-<p>slider works!</p>
+<div class="slid">
+    <div class="shild">
+        <div class="item">
+            <link rel="stylesheet" href="" class="video">
+            <h2></h2>
+        </div>
+    </div>
+
+
+
+
+</div>
