--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,27 @@
-<p>navbar works!</p>
+<div class="navbar">
+
+
+    <img src="https://fontmeme.com/permalink/201207/2fefd85d65936456ca7740f4e60cbcf0.png" alt="netflix">
+    <div class="navleft">
+        <ul>
+            <li>Home</li>
+            <li>TVshow</li>
+            <li>Movies</li>
+            <li>Recently Add</li>
+            <li>My list</li>
+        </ul>
+    </div>
+
+    <div class="nabright">
+        <div class="input">      
+            <mat-icon>search</mat-icon>
+            <input type="text">
+        </div>
+        <button>KIDS</button>
+        <mat-icon> alarm</mat-icon>
+        <mat-icon>account_circle</mat-icon>
+
+    </div>
+
+
+</div>
