--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,26 +1,29 @@
-<div class="navbar">
+<div class="navbar" id="stickyheader"[class.sticky]= "sticky" #stickHeader>
 
-
-    <img src="https://fontmeme.com/permalink/201207/2fefd85d65936456ca7740f4e60cbcf0.png" alt="netflix">
+    <div class="logo">
+        <a href="#"> <img  src="https://fontmeme.com/permalink/201207/2fefd85d65936456ca7740f4e60cbcf0.png" alt="netflix"></a>
+    </div>
     <div class="navleft">
         <ul>
-            <li>Home</li>
-            <li>TVshow</li>
-            <li>Movies</li>
-            <li>Recently Add</li>
-            <li>My list</li>
-        </ul>
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">TV Shows</a></li>
+            <li><a href="#">Movies</a></li>
+            <li><a href="#">Latest</a></li>
+            <li><a href="#">My List</a></li>
+          </ul>
     </div>
 
     <div class="nabright">
-        <div class="input">      
-            <mat-icon>search</mat-icon>
-            <input type="text">
-        </div>
-        <button>KIDS</button>
-        <mat-icon> alarm</mat-icon>
-        <mat-icon>account_circle</mat-icon>
-
+        <ul>
+            <li><a href="#"><mat-icon>search</mat-icon> </a></li>
+            <li><a href="#" id="kids"><mat-icon>KIDS</mat-icon> </a></li>
+            <li><a href="#"><mat-icon>card_giftcard</mat-icon> </a></li>
+            <li><a href="#"><mat-icon>notifications</mat-icon> </a></li>
+            <li>
+                <img src="https://i.pinimg.com/originals/0d/dc/ca/0ddccae723d85a703b798a5e682c23c1.png" alt="avatar">
+            </li>
+        </ul>
+        
     </div>
 
 
