--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,35 +1,96 @@
 .navbar{
     height: 55px;
     background-color: black;
-    color: white;
+    
     display: flex;
     align-items: center ;
     justify-content: space-between;
+    a{ 
+        color: #888686;
+    }
+    a :hover{
+        color: white;
+    }
+    
 }
-img{
-    margin-left: 40px;
-    width: 120px;
-    height: 35px;
-}
-ul{
+.logo{
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    list-style: none;
-   
+    margin-left: 50px;
+    height: 60px;
+    width: 120px;
 }
-li{
-    margin-left: 30px  ;
+.logo img{
+    margin-top: 6px;
+    height: 35px;
+    width: 120px;
+}
+#kids{
+    margin-top: 0px;
+    margin-bottom: 6px;margin-right: 20px;
+}
+.nabright{
+    
+        
+        display: flex;
+        align-items: center;
+        margin-right: 20px;
+        li img {
+            height: 35px;
+            width: 35px;
+        }
+    
+        li a {
+          color: white;
+          display: inline-block;
+          font-size: 14px;
+          font-weight: normal;
+          letter-spacing: 0.8px;
+          text-transform: uppercase;
+          
+    
+          > mat-icon {
+            
+            margin-top: 5px;
+            margin-left: 15px;
+            
+          }
+          
+          
+        }
+        li a :focus {
+            
+          border: none;
+
+        }
+      
+}
+.navleft{
+    position: absolute;
+    margin-left: 240px;
+
 }
 
-.nabright{
-    margin-right: 40px;
+
+ul {
+    list-style: none;
     display: flex;
-    align-items: center center;
-    justify-content: space-between;
-}
-.nabright> button{
-    background-color: transparent;
-    border: none;
-    color: white;
-}
+    align-items: center;
+    gap: 20px;
+  
+    a {
+      display: inline-block;
+      width: fit-content;
+      text-decoration: none;
+      cursor: pointer;
+      color: #a4a4a4;
+      font-size: 14px;
+      font-weight: 600;
+      font-family: 'Netflix Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+      transition: all 0.2s ease;
+  
+      &:hover {
+        color: #696969;
+      }
+    }
+  }
