--- a/src/app/slider/slider.component.scss
+++ b/src/app/slider/slider.component.scss
@@ -1,5 +1,7 @@
-.slid{
-    margin-top: -16px;
-    height: 300px;
-    background-color: #1E1E1E;
+.movie{
+    margin-top: -20px;
+    display:flex;
+    flex-direction: column;
+    background-color:green;
+    
 }
